src/test/resources/public/input/typechecking/pass/passOperator01.jova
class A {
}

class B {
}

class C {
}


class Main {
    public int main() {
        A a;
        B b;
        C c;
        int d;
        int e;
        bool f;
        bool g;
        bool helperBool;

        a = new A;
        b = new B;
        c = new C;
        d = 1;
        e = 2;
        f = false;
        g = true;

        helperBool = a == b;
        helperBool = a != b;

        if (helperBool) {
            d = print("hello world");
        }

        d = d + e;
        d = d * e;
        d = d / e;

        if (helperBool && true || false == false) {
            e = print("hello world");
         }

        return 0;
    }
}